Corrigindo e melhorando responsividade para mobile

--- a/modulo-d/modulo-d-exc-01/modulo-d-exc-01.html
+++ b/modulo-d/modulo-d-exc-01/modulo-d-exc-01.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./modulo-d-exc-01.css">
-    <title>Início | Execício 02</title>
+    <title>Início | Execício 01</title>
   </head>
 
-  <!-- <body> -->
-  <body onload="carregar()">
+  <body>
     <header>
       <h1>Hora do Dia</h1>
     </header>
@@ -31,7 +30,7 @@
       </a></p>
     </footer>
 
-    <script src="modulo-d-exc-01.js"></script>
+    <script src="./modulo-d-exc-01.js"></script>
   </body>
 
 </html>
