--- a/modulo-d/modulo-d-exc-02/modulo-d-exc-02.html
+++ b/modulo-d/modulo-d-exc-02/modulo-d-exc-02.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./modulo-d-exc-02.css">
-    <title>Início | Execício 01</title>
-    <script src="modulo-d-exc-02.js"></script>
+    <title>Início | Execício 02</title>
   </head>
 
   <body>
@@ -34,7 +33,7 @@
           <label for="masculino">Masculino</label>
         </div>
         <div class="espaco right-btn">
-          <button type="button" class="verificar" onclick="verificarIdade()" value="Verificar">Verificar</button>
+          <button type="button" class="verificar" value="Verificar">Verificar</button>
         </div>
       </div>
 
@@ -49,6 +48,8 @@
         GabrielF7
       </a></p>
     </footer>
+
+    <script src="./modulo-d-exc-02.js"></script>
   </body>
 
 </html>
