--- a/modulo-e/modulo-e-exc-01/modulo-e-exc-01.html
+++ b/modulo-e/modulo-e-exc-01/modulo-e-exc-01.html
@@ -9,8 +9,7 @@
     <title>Início | Execício 01</title>
   </head>
 
-  <!-- <body> -->
-  <body onload="carregar()">
+  <body>
     <header>
       <h1>Vamos Contar</h1>
     </header>
@@ -60,7 +59,7 @@
       </a></p>
     </footer>
 
-    <script src="modulo-e-exc-01.js"></script>
+    <script src="./modulo-e-exc-01.js"></script>
   </body>
 
 </html>
