--- a/modulo-e/modulo-e-exc-02/modulo-e-exc-02.html
+++ b/modulo-e/modulo-e-exc-02/modulo-e-exc-02.html
@@ -26,7 +26,7 @@
         <button id="limparTudo" alt="Limpar todos os campos" >&#128465;</button>
       </div>
       
-      <section>
+      <section class="sectionCalc">
         <div>
           Adição
           <select name="tabuada" class="tabuada" id="tab-adicao" size="10"></select>
