Foi criado a pasta "src" para o index principal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./index.modulo.css">
+    <link rel="stylesheet" href="./src/index.css">
     <title> Bem vindos | CEJ </title>
   </head>
 
@@ -25,7 +25,7 @@
       </a></p>
     </footer>
 
-    <script src="./index.modulo.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 
 </html>
